2008-11-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graphops.tcl: Continued integration of graph algorithms.
	* graphops.man: SCCs via Tarjan. Placeholder for max matching.
	* graph/tests/ops/tarjan.test: Bumped version to 0.4.
	* graph/tests/ops/maxmatching.test:
	* graph/tests/XOpsControl:
	* graph/tests/XOpsSetup:
	* graph/tests/XOpsSupport:
	* pkgIndex.tcl:

2008-11-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graphops.tcl: Continued integration of graph algorithms.
	* graphops.man: Test for bipartite graph. Bumped version
	* graph/tests/ops/bipartite.test: to 0.3
	* graph/tests/XOpsControl:
	* graph/tests/XOpsSetup:
	* graph/tests/XOpsSupport:
	* pkgIndex.tcl:

2008-11-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graphops.tcl: Continued integration of graph algorithms.
	* graphops.man: Minimum spanning tree/forest as per Prim.
	* graph/tests/ops/prim.test: Bumped version to 0.2
	* graph/tests/XOpsControl:
	* graph/tests/XOpsSetup:
	* pkgIndex.tcl:

2008-11-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graphops.tcl: Continued integration of graph algorithms.
	* graphops.man: Minimum spanning tree/forest as per Kruskal.
	* graph/tests/ops/kruskal.test:
	* graph/tests/XOpsControl:
	* graph/tests/XOpsSetup:

2008-11-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graphops.tcl: Starting on the integration of Alejandro Paz's
	* graphops.man: (<vidriloco@gmail.com>) work on graph operations
	* graphops.test: for GSoC 2008. First operation: Adjacency matrix.
	* pkgIndex.tcl:
	* graph/test/XOpsControl:
	* graph/test/XOpsSetup:
	* graph/test/XOpsSupport:
	* graph/test/ops/adjmatrix.test:

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graph/graph.c (dup): Fixed duplication of an empty graph, mis-